--- a/package.json
+++ b/package.json
@@ -128,7 +128,8 @@
     "sync-fetch": "^0.3.1",
     "tsx": "3.8.2",
     "xbytes": "^1.7.0",
-    "ytsr": "^3.8.4"
+    "ytsr": "^3.8.4",
+    "yt-dlp-youtube-oauth2": "git+https://github.com/coletdjnz/yt-dlp-youtube-oauth2.git"
   },
   "resolutions": {
     "@types/ws": "8.5.4"
