--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@types/node-emoji": "^1.8.1",
     "@types/spotify-web-api-node": "^5.0.2",
     "@types/validator": "^13.1.4",
-    "@types/ws": "8.5.4",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
@@ -132,6 +132,6 @@
     "yt-dlp-youtube-oauth2": "git+https://github.com/coletdjnz/yt-dlp-youtube-oauth2.git"
   },
   "resolutions": {
-    "@types/ws": "8.5.4"
+    "@types/ws": "^8.5.10"
   }
 }
